src/objects/Pledge__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>A checkbox formula field that denotes if the pledged amount has been met or exceeded and that the StartDate is after today and EndDate is before today</description>
        <formula>(ISBLANK(Received_Amount__c) || Received_Amount__c &lt; Pledge_Amount__c)
&amp;&amp;
(ISBLANK(Start_Date__c) || Start_Date__c &lt;= TODAY())
&amp;&amp; 
(ISBLANK(End_Date__c) || End_Date__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A checkbox formula field that denotes if the pledged amount has been met or exceeded and that the StartDate is after today and EndDate is before today</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Page</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Funraise Pledges</relationshipLabel>
        <relationshipName>Funraise_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date on which this pledge should be considered inactive and donations will stop automatically counting towards fulfilling it</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Received_Amount__c/Pledge_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pledge_Amount__c</fullName>
        <description>The total amount for this pledge</description>
        <label>Pledge Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pledge_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Note: This field will only be filled out for pledges that are created directly from Funraise.  These pledges don&apos;t get fulfilled by multiple donations, only a single donation represented by this lookup field</description>
        <inlineHelpText>Note: This field will only be filled out for pledges that are created directly from Funraise.  These pledges don&apos;t get fulfilled by multiple donations, only a single donation represented by this lookup field</inlineHelpText>
        <label>Pledge Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funraise Pledges</relationshipLabel>
        <relationshipName>Funraise_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge_Donation_uq__c</fullName>
        <description>Only one pledge may reference an given opportunity as it&apos;s sole pledge donation.  This field enforces that since we can&apos;t make the lookup field unique</description>
        <externalId>true</externalId>
        <label>Pledge Donation (unique)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pledge_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The subscription that created this pledge</description>
        <inlineHelpText>The subscription that created this pledge</inlineHelpText>
        <label>Pledge Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Funraise Pledges</relationshipLabel>
        <relationshipName>Funraise_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pledge_Subscription_uq__c</fullName>
        <externalId>true</externalId>
        <label>Pledge Subscription (unique)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Received_Amount__c</fullName>
        <description>Summed opportunity amounts related to this pledge.  Calculation of this value is handled by a trigger whenever opportunities related to this pledge are added or updated</description>
        <inlineHelpText>This value is calculated automatically by a trigger whenever opportunities related to this pledge are added or updated</inlineHelpText>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date at which this pledge should be considered active and have donations automatically count towards fulfilling the pledge</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supporter_PA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Person Account(if enabled) that represents the Funraise supporter that owns this pledge</description>
        <label>Funraise PA Supporter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funraise Pledges</relationshipLabel>
        <relationshipName>Funraise_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporter__c</fullName>
        <description>The contact that represents the Funraise supporter that owns this pledge</description>
        <label>Funraise Supporter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funraise Pledges</relationshipLabel>
        <relationshipName>Funraise_Pledges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fr_Id__c</fullName>
        <externalId>true</externalId>
        <label>Funraise ID</label>
        <length>255</length>
        <!--    Adding this with commitments, can't necessarily make it required due to existing pledges. Investigate later    -->
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funraise Pledge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funraise Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funraise Pledges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>